--- a/index.html
+++ b/index.html
@@ -177,6 +177,24 @@
 
 <!--card todo-->
 
+<div class="container">
+  <div class="card mt-5">
+      <div class="card-header">
+        Todo
+      </div>
+      <div class="card-body">
+        <ul class="list-group list-group-flush border rounded">
+          <li class="list-group-item">
+            <i class="bi bi-square pe-2"></i>Chiamare Segreteria</li>
+          <li class="list-group-item">
+            <i class="bi bi-square pe-2"></i>Mandare avvisi prestiti scaduti</li>
+          <li class="list-group-item">
+            <i class="bi bi-square pe-2"></i>Ordinare nuovi libri</li>
+        </ul>
+      </div>
+  </div>
+</div>
+
 <!--card f.a.q.-->
 
 </main>
