--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <div class="container">
   <div class="card mt-5">
-      <div class="card-header">
+      <div class="card-header fs-5">
         Todo
       </div>
       <div class="card-body">
@@ -196,6 +196,48 @@
 </div>
 
 <!--card f.a.q.-->
+
+<div class="container">
+  <div class="card mt-5">
+      <div class="card-header fs-5">
+        F.A.Q
+      </div>
+      <div class="card-body">
+        <div class="accordion accordion-flush" id="accordionFlush">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            Come aggiungere un nuovo libro?
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlush">
+          <div class="accordion-body">Per aggiungere un nuovo libro, basta cliccare sull'icona in alto a destra "aggiungi nuovo libro" .</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            Come posso accedere all'anagrafica utenti?
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Sulla barra di navigazione in alto a sinistra, trovi Anagrafica Utenti, clicca e inserisci i tuoi dati per accedere</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          Posso usare questa dashboard da mobile?
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Certo, la puoi trovare in fondo alla pagina.</div>
+        </div>
+      </div>
+    </div>
+      </div>
+  </div>
+</div>
 
 </main>
 
