add breakpoint mobile e tablet

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <thead>
     <tr>
       <th scope="col">Titolo</th>
-      <th scope="col"> Data prestito</th>
+      <th scope="col" class="d-none d-sm-table-cell"> Data prestito</th>
       <th scope="col">Stato</th>
       <th scope="col">Azioni</th>
     </tr>
@@ -69,108 +69,156 @@
   <tbody>
     <tr>
       <td scope="row">I pilastri della terra</td>
-      <td> - </td>
+      <td class="d-none d-sm-table-cell"> - </td>
       <td><span class="badge bg-success">Disponibile</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <tr>
       <td scope="row">I promessi sposi</td>
-      <td> - </td>
+      <td class="d-none d-sm-table-cell"> - </td>
       <td> <span class="badge bg-success">Disponibile</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+          </div>
+      </td>
     </tr>
     <tr>
       <td scope="row">Il signore degli anelli</td>
-      <td>18/10/2023</td>
+      <td class="d-none d-sm-table-cell">18/10/2023</td>
       <td><span class="badge bg-warning">In prestito</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <td scope="row">Harry Potter e la pietra filosofale</td>
-      <td> - </td>
+      <td class="d-none d-sm-table-cell"> - </td>
       <td><span class="badge bg-success">Disponibile</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <tr>
       <td scope="row">Il codice Da Vinci</td>
-      <td> - </td>
+      <td class="d-none d-sm-table-cell"> - </td>
       <td><span class="badge bg-danger text-white">Non disponibile</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <tr>
       <td scope="row">Shining</td>
-      <td> - </td>
+      <td class="d-none d-sm-table-cell"> - </td>
       <td><span class="badge bg-success">Disponibile</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <td scope="row">La divina commedia</td>
-      <td>21/09/2023</td>
+      <td class="d-none d-sm-table-cell">21/09/2023</td>
       <td><span class="badge bg-warning">In prestito</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <tr>
       <td scope="row">Il trono di spade</td>
-      <td> - </td>
+      <td class="d-none d-sm-table-cell"> - </td>
       <td> <span class="badge bg-success">Disponibile</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <tr>
       <td scope="row">Il mondo di Sofia</td>
-      <td> - </td>
+      <td class="d-none d-sm-table-cell"> - </td>
       <td><span class="badge bg-danger text-white">Non disponibile</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <td scope="row">Le cronache di Narnia: il leone, la strega e l'armadio</td>
-      <td>25/07/2023</td>
+      <td class="d-none d-sm-table-cell">25/07/2023</td>
       <td><span class="badge bg-warning">In prestito</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <tr>
       <td scope="row">il piccolo principe</td>
-      <td> - </td>
+      <td class="d-none d-sm-table-cell"> - </td>
       <td> <span class="badge bg-success">Disponibile</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
     <tr>
       <td scope="row">La storia infinta</td>
-      <td> - </td>
+      <td class="d-none d-sm-table-cell"> - </td>
       <td> <span class="badge bg-success">Disponibile</span></td>
-      <td><span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-pencil-fill"></i></span>
-    <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
-    <i class="bi bi-trash3-fill"></i></span></td>
+      <td>
+        <div class="d-flex flex-row gap-1">
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-pencil-fill"></i></span>
+          <span class="border rounded px-2 py-1 bg-light text-body-tertiary">
+          <i class="bi bi-trash3-fill"></i></span>
+        </div>
+      </td>
     </tr>
   </tbody>
 </table>
