--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="col-lg-8">
             <div class="d-flex justify-content-between align-items-center mb-3">
             <h4>Catalogo Libri</h4>
-            <a href="#">
+            <a href="./aggiungilibro.html">
                 <button class="bg-primary text-white border-primary rounded p-2">Aggiungi Libro</button>
             </a>
             </div>
